# ACE

./: CMakeLists.txt
Editor/: CMakeLists.txt
Editor/Source/EditorApp/: EditorApp.cpp  EditorCodegen.cpp  EditorCodegen.h  EditorPreferences.cpp  EditorPreferences.h  EditorSettingsPanel.cpp  EditorSettingsPanel.h  FileTemplates.cpp  FileTemplates.h  NewItemDialog.cpp  NewItemDialog.h  main.cpp
Editor/Source/UI/Themes/: SolarizedDark.theme.json  ThemeManager.cpp  ThemeManager.h
Editor/Source/UI/Themes/GMS2/: ThemeGMS2.cpp  ThemeGMS2.h
Editor/Templates/FileTemplates/Cxx/: ClassHeader.h.tmpl  ClassSource.cpp.tmpl  GameMode.json
Engine/: CMakeLists.txt
Engine/Source/Runtime/Core/: AceMinimal.h  AceObjectMacros.h
Engine/Source/Runtime/Project/: Project.cpp  Project.h
Templates/Basic2D/: Template.aceproj  imgui.ini
Tools/Launcher/: CMakeLists.txt  main.cpp
